hphp/test/slow/inout/bad-async.php.expectf

Fatal error: Parameters may not be marked inout on async functions in %s/bad-async.php on line 3
